fixed overflowing text on controlpane resize

--- a/styles/style.css
+++ b/styles/style.css
@@ -116,6 +116,9 @@ select{
 	text-align: center;
 	display: none;
 }
+.controlsTitle{
+	overflow: hidden;	
+}
 .controls h2{
 	font-size: 26px;
 	margin: 1px;
@@ -131,18 +134,16 @@ select{
 	margin-top: 10px;
 	width: 100%;
 	clear:both;
-	height: 25px;
-	
+	height: auto;	
 }
 #refreshControlRow{
 	width: 100%;
 	clear:both;
-	height: 25px;
+	height: auto;
 	margin-top: 0;
 }
 #refreshTree{
 	width: 100%;
-	height: 30px;
 }
 .controls input{
 	vertical-align: middle;
@@ -155,9 +156,10 @@ select{
 .controls button{
 	vertical-align: middle;
 	display: inline-block;
-	height: 30px;
 	width: 100%;
+	height: auto;
 	color: #333;
+	overflow: hidden;
 }
 .controls button span{
 	float: left;
